[workspace]
resolver = "2"
members = [
    "dace",
    "dace_tests",
    "stack_alg_sim",
    "hist",
    "tracer",
    "list_serializable",
    "stack_test_cases",
    "benches/lruvec_bench",
    "benches/stack_alg_sim_bench",
    "static_ri",
    "polybenchrun",
    "aws_utilities"
]

[profile.release]
debug = true
lto = true
