[package]
name = "aws_utilities"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.1"
stack_alg_sim = { path = "../stack_alg_sim" }
hist = { path = "../hist" }
rusoto_core = "0.47.0"
rusoto_s3 = "0.47.0"
tokio = { version = "1", features = ["full"] }
dace_tests = { path = "../dace_tests" }
static_rd = { path = "../static_rd" }
list_serializable = { path = "../list_serializable"}

