[package]
name = "dace_tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dace = { path = "../dace" }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
static_rd = { path = "../static_rd" }
tracer = { path = "../tracer" }

[dev-dependencies]
list_serializable = { path = "../list_serializable" }
