[package]
name = "polybenchrun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hist = { path = "../hist" }
static_rd = { path = "../static_rd" }
dace = { path = "../dace" }
list_serializable = { path = "../list_serializable" }
serde_json = "1.0.97"
aws_utilities = { path = "../aws_utilities" }



