[package]
name = "polybenchrun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hist = { path = "../hist" }
tracer = { path = "../tracer" }
dace = { path = "../dace" }
dace_tests = { path = "../dace_tests" }
list_serializable = { path = "../list_serializable" }
serde_json = "1.0.97"
aws_utilities = { path = "../aws_utilities" }
mysql = "24.0.0"
tokio = { version = "1", features = ["full"] }
